--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,11 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Visual Studio cache files
+.vs/
+*/.vscode/
+*.vs/
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
